analysis-reports/clang-tidy/._before_ggrep.c.txt
/home/sj/1/refactoring-heirloom-grep/before/ggrep.c:107:15: warning: narrowing conversion from 'unsigned long' to signed type 'long' is implementation-defined [bugprone-narrowing-conversions]
                e0->e_len = loconv(e0->e_pat, e0->e_pat, e0->e_len + 1) - 1;
                            ^
/home/sj/1/refactoring-heirloom-grep/before/ggrep.c:133:13: warning: narrowing conversion from 'unsigned long' to signed type 'long' is implementation-defined [bugprone-narrowing-conversions]
        long    len = strlen(pat);
                      ^
/home/sj/1/refactoring-heirloom-grep/before/grep.h:33:10: error: 'iblok.h' file not found [clang-diagnostic-error]
#include        "iblok.h"
                ^~~~~~~~~
/home/sj/1/refactoring-heirloom-grep/before/grep.h:70:13: warning: invalid case style for variable 'Eflag' [readability-identifier-naming]
extern int              Eflag;          /* use EREs */
                        ^~~~~
                        eflag
/home/sj/1/refactoring-heirloom-grep/before/grep.h:71:13: warning: invalid case style for variable 'Fflag' [readability-identifier-naming]
extern int              Fflag;          /* use fixed strings */
                        ^~~~~
                        fflag
